Create basic functional search-page

--- a/angular.json
+++ b/angular.json
@@ -5,10 +5,14 @@
   "projects": {
     "bankapp": {
       "projectType": "application",
-      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
+      "schematics": {
+        "@schematics/angular:component": {
+          "styleext": "scss"
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
