--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "bootstrap": "^4.5.3",
     "jasmine-marbles": "^0.6.0",
     "jquery": "^3.5.1",
+    "ng2-completer": "^9.0.1",
+    "ng2-smart-table": "^1.7.2",
     "rxjs": "~6.6.3",
+    "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.3",
     "zone.js": "~0.10.3"
   },
